--- a/ChecklistApp.csproj
+++ b/ChecklistApp.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\..\Libraries\MVVMLibrary\MVVMLibrary\MVVMLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
